<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebToolbox</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_section3">Section 3</string>
    <string name="error_getting_play_url">Error getting playUrl, try again later</string>
    <string name="title_activity_play_hd">Play HD</string>
    <string name="title_activity_play">Play</string>
    <string name="error_getting_download_urls">Error getting downloadUrls, try again later</string>
    <string name="title_activity_download_hd">Download HD</string>
    <string name="title_activity_download">Download</string>
    <string name="download_started">Download started</string>
    <string name="working">Working...</string>
    <string name="about_description">About WebToolbox</string>

    <!-- Settings -->
    <string name="enabled_component">Enabled Component</string>
    <string name="youku_play_hd">Youku Play HD</string>
    <string name="youku_play_hd_summary">High quality</string>
    <string name="youku_play">Youku Play</string>
    <string name="youku_play_summary">Normal quality</string>
    <string name="youku_download_hd">Youku Download HD</string>
    <string name="youku_download_hd_summary">High quality</string>
    <string name="youku_download">Youku Download</string>
    <string name="youku_download_summary">Normal quality</string>
    <string name="html5_video">HTML5 Video</string>
    <string name="html5_video_summary">Play video using www.html5video.info</string>

</resources>
